--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="100"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="80"
+        android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/hand_anim"
+            android:scaleType="fitCenter"
+            android:id="@+id/hand_anim_image_view"/>
+
+
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/com_rock"
+            android:scaleType="fitCenter"
+            android:id="@+id/set_hand_image_view"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="20"
+        android:orientation="horizontal"
+        android:weightSum="100">
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="25"
+            android:backgroundTint="#FFEB3B"
+            android:scaleType="fitCenter"
+            android:src="@drawable/com_scissors"
+            android:id="@+id/scissors_button"
+            android:onClick="button_click"/>
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="25"
+            android:backgroundTint="#FFEB3B"
+            android:scaleType="fitCenter"
+            android:src="@drawable/com_rock"
+            android:id="@+id/rock_button"
+            android:onClick="button_click"/>
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="25"
+            android:backgroundTint="#FFEB3B"
+            android:scaleType="fitCenter"
+            android:src="@drawable/com_paper"
+            android:id="@+id/paper_button"
+            android:onClick="button_click"/>
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="25"
+            android:backgroundTint="#FFEB3B"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_replay_black_24dp"
+            android:id="@+id/replay_button"
+            android:onClick="button_click"/>
+
+    </LinearLayout>
+
+</LinearLayout>
