--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/com_rock"
+            android:src="@drawable/ic_replay_black_24dp"
             android:scaleType="fitCenter"
             android:id="@+id/set_hand_image_view"/>
 
