--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,23 +14,20 @@
         android:layout_weight="80"
         android:orientation="vertical">
 
+
+        <ImageView
+            android:id="@+id/set_hand_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_replay_black_24dp" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/hand_anim"
-            android:scaleType="fitCenter"
+            android:scaleType="centerInside"
             android:id="@+id/hand_anim_image_view"/>
-
-
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_replay_black_24dp"
-            android:scaleType="fitCenter"
-            android:id="@+id/set_hand_image_view"/>
-
-
     </LinearLayout>
 
     <LinearLayout
@@ -48,7 +45,8 @@
             android:scaleType="fitCenter"
             android:src="@drawable/com_scissors"
             android:id="@+id/scissors_button"
-            android:onClick="button_click"/>
+            android:onClick="button_click"
+            android:tag="1"/>
 
         <ImageButton
             android:layout_width="0dp"
@@ -58,7 +56,8 @@
             android:scaleType="fitCenter"
             android:src="@drawable/com_rock"
             android:id="@+id/rock_button"
-            android:onClick="button_click"/>
+            android:onClick="button_click"
+            android:tag="2"/>
 
         <ImageButton
             android:layout_width="0dp"
@@ -68,7 +67,8 @@
             android:scaleType="fitCenter"
             android:src="@drawable/com_paper"
             android:id="@+id/paper_button"
-            android:onClick="button_click"/>
+            android:onClick="button_click"
+            android:tag="3"/>
 
         <ImageButton
             android:layout_width="0dp"
